logs/3823-javac.out
src/test/java/com/example/gauge_exmpl/StepImplementation.java:5: error: package org.openqa.selenium does not exist
import org.openqa.selenium.WebDriver;
                          ^
src/test/java/com/example/gauge_exmpl/StepImplementation.java:9: error: cannot find symbol
    public static WebDriver webDriver;
                  ^
  symbol:   class WebDriver
  location: class StepImplementation
src/test/java/driver/Driver.java:5: error: package org.openqa.selenium does not exist
import org.openqa.selenium.WebDriver;
                          ^
src/test/java/driver/Driver.java:6: error: package org.openqa.selenium does not exist
import org.openqa.selenium.WebElement;
                          ^
src/test/java/driver/Driver.java:7: error: package org.openqa.selenium.support does not exist
import org.openqa.selenium.support.FindBy;
                                  ^
src/test/java/driver/Driver.java:8: error: package org.openqa.selenium.support does not exist
import org.openqa.selenium.support.PageFactory;
                                  ^
src/test/java/driver/Driver.java:12: error: cannot find symbol
    public Driver(WebDriver driver) {
                  ^
  symbol:   class WebDriver
  location: class Driver
src/test/java/driver/DriverFactory.java:3: error: package io.github.bonigarcia.wdm does not exist
import io.github.bonigarcia.wdm.WebDriverManager;
                               ^
src/test/java/driver/DriverFactory.java:6: error: package org.junit.jupiter.api does not exist
import static org.junit.jupiter.api.Assertions.*;
                                   ^
src/test/java/driver/DriverFactory.java:8: error: package org.openqa.selenium does not exist
import org.openqa.selenium.By;
                          ^
src/test/java/driver/DriverFactory.java:9: error: package org.openqa.selenium does not exist
import org.openqa.selenium.WebDriver;
                          ^
src/test/java/driver/DriverFactory.java:10: error: package org.openqa.selenium does not exist
import org.openqa.selenium.WebElement;
                          ^
src/test/java/driver/DriverFactory.java:11: error: package org.openqa.selenium.chrome does not exist
import org.openqa.selenium.chrome.ChromeDriver;
                                 ^
src/test/java/driver/DriverFactory.java:12: error: package org.openqa.selenium.chrome does not exist
import org.openqa.selenium.chrome.ChromeOptions;
                                 ^
src/test/java/driver/DriverFactory.java:13: error: package org.openqa.selenium.firefox does not exist
import org.openqa.selenium.firefox.FirefoxDriver;
                                  ^
src/test/java/driver/DriverFactory.java:14: error: package org.openqa.selenium.ie does not exist
import org.openqa.selenium.ie.InternetExplorerDriver;
                             ^
src/test/java/driver/DriverFactory.java:19: error: cannot find symbol
    public static WebDriver getDriver() {
                  ^
  symbol:   class WebDriver
  location: class DriverFactory
src/test/java/driver/DriverFactory.java:4: error: package org.junit.jupiter.api does not exist
import org.junit.jupiter.api.*;
^
src/test/java/driver/Driver.java:13: error: cannot find symbol
        PageFactory.initElements(driver, this);
        ^
  symbol:   variable PageFactory
  location: class Driver
src/test/java/driver/DriverFactory.java:26: error: cannot find symbol
                WebDriverManager.iedriver().setup();
                ^
  symbol:   variable WebDriverManager
  location: class DriverFactory
src/test/java/driver/DriverFactory.java:27: error: cannot find symbol
                return new InternetExplorerDriver();
                           ^
  symbol:   class InternetExplorerDriver
  location: class DriverFactory
src/test/java/driver/DriverFactory.java:29: error: cannot find symbol
                WebDriverManager.firefoxdriver().setup();
                ^
  symbol:   variable WebDriverManager
  location: class DriverFactory
src/test/java/driver/DriverFactory.java:30: error: cannot find symbol
                return new FirefoxDriver();
                           ^
  symbol:   class FirefoxDriver
  location: class DriverFactory
src/test/java/driver/DriverFactory.java:33: error: cannot find symbol
                WebDriverManager.chromedriver().setup();
                ^
  symbol:   variable WebDriverManager
  location: class DriverFactory
src/test/java/driver/DriverFactory.java:35: error: cannot find symbol
                ChromeOptions options = new ChromeOptions();
                ^
  symbol:   class ChromeOptions
  location: class DriverFactory
src/test/java/driver/DriverFactory.java:35: error: cannot find symbol
                ChromeOptions options = new ChromeOptions();
                                            ^
  symbol:   class ChromeOptions
  location: class DriverFactory
src/test/java/driver/DriverFactory.java:41: error: cannot find symbol
                return new ChromeDriver(options);
                           ^
  symbol:   class ChromeDriver
  location: class DriverFactory
27 errors
